# rules_kotlin

docs/: kotlin.md
examples/associates_dagger/: BUILD.bazel
examples/associates_dagger/projects/service/impl/src/main/kotlin/service/impl/: ConsoleLogger.kt
examples/dagger/: BUILD  MODULE.bazel  WORKSPACE
examples/dagger/src/: BUILD
examples/dagger/src/coffee/app/: BUILD  CoffeeApp.kt
examples/dagger/src/coffee/base/: BUILD  CoffeeMaker.kt  ElectricHeater.kt  Heater.kt  Pump.kt  Thermosiphon.kt
examples/dagger/src/coffee/wiring/: BUILD  CoffeeShop.kt  DripCoffeeModule.kt  PumpModule.kt
examples/jetpack_compose/: WORKSPACE
kotlin/internal/: toolchains.bzl
kotlin/internal/jvm/: associates.bzl  compile.bzl  jvm_deps.bzl
src/main/kotlin/: BUILD  BUILD.release.bazel
src/main/kotlin/io/bazel/kotlin/builder/: KotlinBuilderComponent.java
src/main/kotlin/io/bazel/kotlin/builder/cmd/: BUILD.bazel  Build.kt
src/main/kotlin/io/bazel/kotlin/builder/tasks/: KotlinBuilder.kt
src/main/kotlin/io/bazel/kotlin/builder/tasks/jvm/: CompilationTask.kt  InternalCompilerPlugins.kt  KotlinJvmTaskExecutor.kt
src/main/kotlin/io/bazel/kotlin/builder/toolchain/: KotlinToolchain.kt
src/main/kotlin/io/bazel/kotlin/plugin/associates/: ExperimentalAssociatesAbiGen.kt
src/main/protobuf/: kotlin_model.proto
src/main/starlark/core/compile/: common.bzl
src/test/kotlin/io/bazel/kotlin/: defs.bzl
src/test/kotlin/io/bazel/kotlin/builder/: KotlinAbstractTestBuilder.java
src/test/starlark/compile/: BUILD.bazel  associate_java_compile_tests.bzl
src/test/starlark/internal/jvm/: jvm_deps_tests.bzl
