load("@rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "2.3",
    #build_tools_impl = "@maven_rules_kotlin_btapi_compat//:org_jetbrains_kotlin_kotlin_build_tools_impl",
    #experimental_remove_private_classes_in_abi_jars = True,
    #experimental_treat_internal_as_private_in_abi_jars = True,
    experimental_use_abi_jars = True,
    #kotlin_stdlib = "@maven_rules_kotlin_btapi_compat//:org_jetbrains_kotlin_kotlin_stdlib",
    language_version = "2.3",
)
